--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
               </div>
             </div>
             <!-- After Login -->
-
             <div
               class="gap-4 align-items-center d-flex justify-content-between p-3 p-lg-0 ms-0 ms-lg-4"
             >
@@ -130,7 +129,7 @@
                       </div> -->
                       <!-- item in cart -->
                     </div>
-                    <a href="">
+                    <a href="cart page.html">
                       <button class="btn text-capitalize text-nowrap w-100">
                         view all items
                       </button></a
