--- a/cart page.html
+++ b/cart page.html
@@ -90,6 +90,7 @@
       </nav>
     </header>
 
+    <!-- cart items -->
     <section class="mb-5" style="margin-top: 150px">
       <div class="container">
         <div
@@ -126,6 +127,12 @@
         </div>
       </div>
     </section>
+    <!-- cart items -->
+
+    <!-- check out  -->
+     
+    <!-- check out  -->
+
     <script src="js/all.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/user.js"></script>
