--- a/cart page.html
+++ b/cart page.html
@@ -91,46 +91,75 @@
     </header>
 
     <!-- cart items -->
-    <section class="mb-5" style="margin-top: 150px">
+    <section class="mb-5" style="margin-top: 100px">
       <div class="container">
-        <div
-          class="row product-parent justify-content-lg-start justify-content-center"
-        >
-          <!-- product item -->
-          <div class="col-10 col-md-6 col-lg-3">
-            <div
-              class="card product-item position-relative overflow-hidden p-3 shadow border-0"
-            >
+        <div class="d-flex flex-column flex-lg-row">
+          <!-- product parent -->
+          <div class="product-parent col-12 col-lg-8">
+            <!-- product item -->
+            <div class="col-12 mb-3">
               <div
-                class="img z-1 d-flex justify-content-center align-items-center position-relative h-100"
+                class="card p-3 shadow border-0 d-flex flex-column flex-md-row w-100 justify-content-center align-items-center"
+                style="background-color: var(--white)"
               >
-                <img src="img/products/1.png" alt="" style="width: 100%" />
-              </div>
-              <div
-                class="content text-capitalize z-1 position-relative p-2 d-flex flex-column justify-content-center align-items-center"
-              >
-                <h3 style="color: var(--dark)">dell laptop</h3>
-                <p style="color: var(--med)">price : $200</p>
-                <button
-                  class="btn card-btn text-capitalize col-12 position-relative"
+                <div class="text-capitalize d-flex p-2">
+                  <div class="me-2">
+                    <img
+                      src="img/products/1.png"
+                      alt=""
+                      style="height: 100px; width: 100%"
+                    />
+                  </div>
+                  <div>
+                    <h3 style="color: var(--dark)">dell laptop</h3>
+                    <p style="color: var(--med)" class="m-0">
+                      <span class="fw-bold">price :</span> $${product.price}
+                    </p>
+                    <p style="color: var(--med)" class="m-0">
+                      <span class="fw-bold">quantity :</span>
+                      ${product.quantity}
+                    </p>
+                  </div>
+                </div>
+                <div
+                  class="d-flex flex-column align-items-center justify-content-evenly ms-md-auto"
                 >
-                  add to cart
-                </button>
-              </div>
-              <div class="fav-icon position-absolute me-3 fs-1">
-                <i class="fa-regular fa-heart icon"></i>
-                <!-- <i class="fa-solid fa-heart"></i> -->
+                  <div class="d-flex justify-content-center align-items-center gap-2">
+                    <button class="btn increment-btn">+</button>
+                    <input
+                      type="number"
+                      max="5"
+                      min="0"
+                      value=""
+                      class="text-center border-0 quantity-input"
+                      style="width: 40px"
+                    />
+                    <button class="btn decrement-btn" style="background-color: var(--pop);">-</button>
+                  </div>
+                </div>
               </div>
             </div>
+            <!-- product item -->
           </div>
-          <!-- product item -->
+          <!-- product parent -->
+          <!-- check out  -->
+          <div class="col-12 col-lg-3"></div>
+          <!-- check out  -->
         </div>
       </div>
     </section>
     <!-- cart items -->
 
     <!-- check out  -->
-     
+    <!-- <section class="my-5">
+      <div class="container">
+        <div class="col-4 m-auto">
+          <div class="bg-primary d-flex p-2 rounded">
+            <div class="h3">total :</div>
+          </div>
+        </div>
+      </div>
+    </section> -->
     <!-- check out  -->
 
     <script src="js/all.js"></script>
