--- a/cart page.html
+++ b/cart page.html
@@ -124,7 +124,9 @@
                 <div
                   class="d-flex flex-column align-items-center justify-content-evenly ms-md-auto"
                 >
-                  <div class="d-flex justify-content-center align-items-center gap-2">
+                  <div
+                    class="d-flex justify-content-center align-items-center gap-2"
+                  >
                     <button class="btn increment-btn">+</button>
                     <input
                       type="number"
@@ -134,7 +136,12 @@
                       class="text-center border-0 quantity-input"
                       style="width: 40px"
                     />
-                    <button class="btn decrement-btn" style="background-color: var(--pop);">-</button>
+                    <button
+                      class="btn decrement-btn"
+                      style="background-color: var(--pop)"
+                    >
+                      -
+                    </button>
                   </div>
                 </div>
               </div>
