--- a/cart page.html
+++ b/cart page.html
@@ -93,7 +93,7 @@
     <!-- cart items -->
     <section class="mb-5" style="margin-top: 100px">
       <div class="container">
-        <div class="d-flex flex-column flex-lg-row">
+        <div class="d-flex flex-column flex-lg-row justify-content-lg-between">
           <!-- product parent -->
           <div class="product-parent col-12 col-lg-8">
             <!-- product item -->
@@ -150,7 +150,55 @@
           </div>
           <!-- product parent -->
           <!-- check out  -->
-          <div class="col-12 col-lg-3"></div>
+          <div class="col-12 col-lg-3">
+            <div class="container p-0 mt-5 mt-lg-0 short-cart">
+              <!-- <div
+                class="shadow p-4 rounded d-flex flex-column "
+                style="background-color: var(--white)"
+              >
+                <h3 class="text-capitalize" style="color: var(--dark)">
+                  cart totals
+                </h3>
+                <hr
+                  style="
+                    background-color: var(--med);
+                    width: 100%;
+                    height: 2px;
+                    border: none;
+                  "
+                />
+                <div class="d-flex flex-column p-2 text-capitalize">
+                  <div class="d-flex justify-content-between">
+                    <p style="color: var(--med)">shipping</p>
+                    <p style="color: var(--dark)">free</p>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <p style="color: var(--med)">tax</p>
+                    <p style="color: var(--dark)">$0</p>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <p style="color: var(--med)">subtotal</p>
+                    <p style="color: var(--dark)">100</p>
+                  </div>
+                </div>
+                <hr
+                  style="
+                    background-color: var(--dark);
+                    width: 100%;
+                    height: 2px;
+                    border: none;
+                    margin-top: 0px;
+                  "
+                />
+                <div class="d-flex justify-content-between px-3">
+                  <p style="color: var(--dark)" class="fs-3 text-capitalize">total</p>
+                  <p style="color: var(--dark)" class="fs-5">100</p>
+                </div>
+                <button class="btn mx-3"> process to check out</button>
+                <a href="index.html" class="m-auto text-capitalize mt-4" style="color: var(--med);"><i class="fa-solid fa-arrow-left me-2"></i> continue shopping </a>
+              </div> -->
+            </div>
+          </div>
           <!-- check out  -->
         </div>
       </div>
