--- a/cart page.html
+++ b/cart page.html
@@ -205,17 +205,8 @@
     </section>
     <!-- cart items -->
 
-    <!-- check out  -->
-    <!-- <section class="my-5">
-      <div class="container">
-        <div class="col-4 m-auto">
-          <div class="bg-primary d-flex p-2 rounded">
-            <div class="h3">total :</div>
-          </div>
-        </div>
-      </div>
-    </section> -->
-    <!-- check out  -->
+      <!-- fav item -->
+      <!-- fav item -->
 
     <script src="js/all.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
