--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </button>
                 <div class="position-absolute view-cart p-4 rounded">
                   <div class="w-100">
-                    <div class="cart-preview d-flex flex-column overflow-scroll ">
+                    <div class="cart-preview d-flex flex-column overflow-scroll overflow-x-hidden ">
                       <!-- item in cart -->
                       <!-- <div class="d-flex justify-content-between p-2">
                         <div class="d-flex justify-content-center align-items-center ">
